--- a/styles/styles.css
+++ b/styles/styles.css
@@ -195,6 +195,7 @@ transition: all 0.4s ease 0s;
 	right: 20%;
 	padding: 20px;
 	color: #ffffff;
+	backdrop-filter: contrast(0.5);
 }
 
 .banner img {
